# qoriq-rcw

./: LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: LICENSE.upstream  README.md  ls1028a.rcwi  ls1088a.rcwi  ls2088a.rcwi  lx2160a.rcwi  lx2160a_regs.rcw
debian/: changelog  control  copyright  qoriq-rcw-data.install  qoriq-rcw.install  rules
man/: qoriq-rcw.1.md
src/: flash_db.c  flash_db.h  flash_dump.c  flash_dump.h  main.c  runtime_dump.c  runtime_dump.h  soc_db.c  soc_db.h
tests/: compare_with_rcwpy.sh  meson.build  test_flash_db.c  test_flash_dump.c  test_runtime_dump.c  test_soc_db.c
